# resoca

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  conanfile.txt  setup_vcan.sh
doc/: Protocoll.md
python/: ResocaMessage_pb2.py  test_client.py
src/server/: CanDevice.cpp  CanDevice.hpp  CanDeviceManager.cpp  CanDeviceManager.hpp  CanEvent.cpp  CanFrame.cpp  TCPServer.cpp  TCPServer.hpp  config.h  main.cpp
src/shared/: CanEvent.cpp  CanEvent.hpp  CanFrame.cpp  CanFrame.hpp
src/shared/protobuf/: ResocaMessage.proto
src/shared/protobuf/cpp/: ResocaMessage.pb.cc  ResocaMessage.pb.h
src/windows/ResocaClient/: ResocaClient.sln
src/windows/ResocaClient/ResocaClient/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  ResocaClient.csproj
src/windows/ResocaClient/ResocaClient/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
src/windows/ResocaClient/ResocaClientLib/: ResocaClient.cs  ResocaClientLib.csproj  ResocaMessage.cs  packages.config
src/windows/ResocaClient/ResocaClientLib/Properties/: AssemblyInfo.cs
